# psycholog_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  asgi.py  docker-compose.yml  pyproject.toml  requirements.txt  traefik-entrypoint.sh
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0de71a60ca59_init.py  6feb596e8f27_add_paymentlogs_model.py  bf760bbe94b7_unique_telegram_id.py  c490fc76f3d0_fix_aye.py
source/: config.py
source/application/: base.py
source/application/ai/: ai_service.py
source/application/ai_assistant/: AssistantServiceInterface.py  ai_assistant_service.py
source/application/message_history/: MessageHistoryServiceInterface.py  message_history_service.py
source/application/payment/: PaymentServiceInterface.py  payment_service.py
source/application/user/: __init__.py  create.py  get_by_id.py
source/core/: enum.py  exceptions.py
source/core/lexicon/: bot.py  prompts.py
source/core/schemas/: assistant_schemas.py  payment_schema.py  user.py  user_schema.py
source/infrastructure/ai_assistant/: ai_assistant.py
source/infrastructure/assistant/: assistant.py  prompts.py
source/infrastructure/config/: __init__.py  models.py  readers.py
source/infrastructure/database/models/: base_model.py  payment_model.py  user_model.py
source/infrastructure/database/repository/: __init__.py  base_repo.py  payment_repo.py  user_repo.py
source/infrastructure/dishka/: __init__.py  bot.py  config.py  db.py  interactors.py  neuron.py  payment.py  repositories.py  storage_redis.py
source/infrastructure/telegram/handlers/: __init__.py  check_in.py  commands.py  main_menu.py  risk_protocol.py  start.py
source/infrastructure/telegram/handlers/support_methods/: calming.py  cbt.py  problem_solving.py  venting.py
source/infrastructure/telegram/keyboards/: keyboards.py
source/infrastructure/telegram/middlewares/: load_user.py
source/infrastructure/telegram/states/: user_states.py
source/infrastructure/yookassa/: __init__.py  yookassa.py
source/main/: bot.py  webhooks.py
source/presentation/fastapi/: __init__.py  webhooks_router.py
source/presentation/telegram/: utils.py
source/presentation/telegram/callbacks/: method_callbacks.py
source/presentation/telegram/handlers/: __init__.py  check_in.py  help.py  main_menu.py  risk_protocol.py  start.py  subscription.py
source/presentation/telegram/handlers/support_methods/: __init__.py  calming.py  cbt.py  problem_solving.py  venting.py
source/presentation/telegram/keyboards/: keyboards.py
source/presentation/telegram/middlewares/: __init__.py  load_user.py
source/presentation/telegram/states/: user_states.py
source/presentation/webhooks/: __init__.py  router.py
tests/: conftest.py  pytest.ini
tests/test_repository/: test_user_repo.py
