[project]
name = "psycholog-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "reddmonchick"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "environs (>=14.3.0,<15.0.0)",
    "dishka (>=1.6.0,<2.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
