[project]
name = "trauma_project"
version = "0.1.0"
description = "psychologist assistant via Deepseek"
authors = [
    {name = "reddmonchick"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (==2.11.7)",
    "environs (>=14.3.0,<15.0.0)",
    "dishka (>=1.6.0,<2.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "sqlalchemy (==2.0.43)",
    "redis (>=6.4.0,<7.0.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "alembic (==1.16.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.10.0)",
    "certifi (==2025.8.3)",
    "distro (==1.9.0)",
    "dotenv (==0.9.9)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "jiter (==0.10.0)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.2)",
    "openai (==1.99.9)",
    "pydantic-settings (==2.10.1)",
    "python-dotenv (==1.1.1)",
    "sniffio (==1.3.1)",
    "tqdm (==4.67.1)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pytest-tornasync (>=0.6.0.post2,<0.7.0)",
    "pytest-trio (>=0.8.0,<0.9.0)",
    "pytest-twisted (>=1.14.3,<2.0.0)",
    "twisted (>=25.5.0,<26.0.0)",
]

[tool.poetry]
name = "trauma_project"
version = "0.1.0"
description = "psychologist assistant via Deepseek"
authors = ["reddmonchick"]
readme = "README.md"
packages = [
    { include = "source", from = "." }
]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
